--- a/pom.xml
+++ b/pom.xml
@@ -21,17 +21,17 @@
 
     <dependencies>
         <!--swagger文档导出工具-->
-<!--        <dependency>-->
-<!--            <groupId>io.github.swagger2markup</groupId>-->
-<!--            <artifactId>swagger2markup</artifactId>-->
-<!--            <version>1.3.3</version>-->
-<!--        </dependency>-->
-<!--        <dependency>-->
-<!--            <groupId>org.asciidoctor</groupId>-->
-<!--            <artifactId>asciidoctorj-pdf</artifactId>-->
-<!--            <version>1.5.0-alpha.10.1</version>-->
-<!--            <scope>test</scope>-->
-<!--        </dependency>-->
+        <!--        <dependency>-->
+        <!--            <groupId>io.github.swagger2markup</groupId>-->
+        <!--            <artifactId>swagger2markup</artifactId>-->
+        <!--            <version>1.3.3</version>-->
+        <!--        </dependency>-->
+        <!--        <dependency>-->
+        <!--            <groupId>org.asciidoctor</groupId>-->
+        <!--            <artifactId>asciidoctorj-pdf</artifactId>-->
+        <!--            <version>1.5.0-alpha.10.1</version>-->
+        <!--            <scope>test</scope>-->
+        <!--        </dependency>-->
         <!--添加swagger-->
         <dependency>
             <groupId>io.springfox</groupId>
@@ -48,10 +48,10 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-jdbc</artifactId>
         </dependency>
-<!--        <dependency>-->
-<!--            <groupId>org.springframework.boot</groupId>-->
-<!--            <artifactId>spring-boot-starter-freemarker</artifactId>-->
-<!--        </dependency>-->
+        <!--        <dependency>-->
+        <!--            <groupId>org.springframework.boot</groupId>-->
+        <!--            <artifactId>spring-boot-starter-freemarker</artifactId>-->
+        <!--        </dependency>-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
@@ -73,12 +73,12 @@
             <scope>test</scope>
         </dependency>
 
-<!--        <dependency>-->
-<!--            <groupId>org.springframework.boot</groupId>-->
-<!--            <artifactId>spring-boot-devtools</artifactId>-->
-<!--            <optional>true</optional>-->
-<!--            <scope>true</scope>-->
-<!--        </dependency>-->
+        <!--        <dependency>-->
+        <!--            <groupId>org.springframework.boot</groupId>-->
+        <!--            <artifactId>spring-boot-devtools</artifactId>-->
+        <!--            <optional>true</optional>-->
+        <!--            <scope>true</scope>-->
+        <!--        </dependency>-->
         <dependency>
             <groupId>commons-net</groupId>
             <artifactId>commons-net</artifactId>
@@ -91,23 +91,28 @@
             <version>4.1.4</version>
         </dependency>
 
-        <dependency>
-            <groupId>com.google.code.gson</groupId>
-            <artifactId>gson</artifactId>
-            <version>2.8.5</version>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>com.google.code.gson</groupId>-->
+<!--            <artifactId>gson</artifactId>-->
+<!--            <version>2.8.5</version>-->
+<!--        </dependency>-->
 
         <dependency>
             <groupId>redis.clients</groupId>
             <artifactId>jedis</artifactId>
             <version>3.0.1</version>
         </dependency>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.8.5</version>
+        </dependency>
 
-<!--        <dependency>-->
-<!--            <groupId>com.jfinal</groupId>-->
-<!--            <artifactId>jfinal</artifactId>-->
-<!--            <version>3.1</version>-->
-<!--        </dependency>-->
+        <!--        <dependency>-->
+        <!--            <groupId>com.jfinal</groupId>-->
+        <!--            <artifactId>jfinal</artifactId>-->
+        <!--            <version>3.1</version>-->
+        <!--        </dependency>-->
 
         <!--<dependency>
             <groupId>org.springframework.boot</groupId>
@@ -121,6 +126,24 @@
             <version>3.0.1</version>
             <scope>provided</scope>
         </dependency>-->
+
+        <!-- 微信小程序要添加的依赖 -->
+        <dependency>
+            <groupId>org.bouncycastle</groupId>
+            <artifactId>bcprov-jdk15on</artifactId>
+            <version>1.55</version>
+        </dependency>
+        <!-- 本地导入到maven中jar  -->
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.56</version>
+        </dependency>
+        <dependency>
+            <groupId>commons-codec</groupId>
+            <artifactId>commons-codec</artifactId>
+            <version>1.10</version>
+        </dependency>
     </dependencies>
 
     <build>
@@ -151,14 +174,14 @@
                 </dependencies>
             </plugin>
             <!--使用热部署的插件-->
-<!--            <plugin>-->
-<!--                <groupId>org.springframework.boot</groupId>-->
-<!--                <artifactId>spring-boot-maven-plugin</artifactId>-->
-<!--                <configuration>-->
-<!--                    &lt;!&ndash;fork :  如果没有该项配置devtools不会起作用，即应用不会restart &ndash;&gt;-->
-<!--                    <fork>true</fork>-->
-<!--                </configuration>-->
-<!--            </plugin>-->
+            <!--            <plugin>-->
+            <!--                <groupId>org.springframework.boot</groupId>-->
+            <!--                <artifactId>spring-boot-maven-plugin</artifactId>-->
+            <!--                <configuration>-->
+            <!--                    &lt;!&ndash;fork :  如果没有该项配置devtools不会起作用，即应用不会restart &ndash;&gt;-->
+            <!--                    <fork>true</fork>-->
+            <!--                </configuration>-->
+            <!--            </plugin>-->
             <!--Mybatis-generator插件,用于自动生成Mapper和POJO-->
             <plugin>
                 <groupId>org.mybatis.generator</groupId>
@@ -188,5 +211,4 @@
             </plugin>
         </plugins>
     </build>
-
 </project>
