--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-#mysqlÅäÖÃ
+#mysqlï¿½ï¿½ï¿½ï¿½
 spring.datasource.url = jdbc:mysql://cdb-bksn3kkl.gz.tencentcdb.com:10050/health?serverTimezone=PRC&useUnicode=true&characterEncoding=UTF-8
 spring.datasource.username = root
 spring.datasource.password= bk_28135
@@ -7,6 +7,9 @@ spring.datasource.max-active=20
 spring.datasource.max-idle=8
 spring.datasource.min-idle=8
 spring.datasource.initial-size=10
+
+springfox.documentation.swagger.v2.host=https://sunnyqcloud.com
+springfox.documentation.swagger.v2.path=/api-docs
 
 mybatis.mapper-locations=classpath:com.bkit.fatdown.mappers/*.xml
 
@@ -37,29 +40,29 @@ FTP_PASSWORD=ftpuser
 FTP_BASE_PATH=/
 IMAGE_BASE_URL=http://image.sunnyqcloud.com
 
-#mybatis pagehelper·ÖÒ³²å¼þ
+#mybatis pagehelperï¿½ï¿½Ò³ï¿½ï¿½ï¿½
 mybatis.config-location=classpath:/config/SqlMapConfig.xml
 
-#redisÅäÖÃ¿ªÊ¼
-# RedisÊý¾Ý¿âË÷Òý£¨Ä¬ÈÏÎª0£©
+#redisï¿½ï¿½ï¿½Ã¿ï¿½Ê¼
+# Redisï¿½ï¿½ï¿½Ý¿ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½Ä¬ï¿½ï¿½Îª0ï¿½ï¿½
 spring.redis.database=0
-# Redis·þÎñÆ÷µØÖ·
+# Redisï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½Ö·
 spring.redis.host=134.175.135.105
-# Redis·þÎñÆ÷Á¬½Ó¶Ë¿Ú
+# Redisï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½Ó¶Ë¿ï¿½
 spring.redis.port=6379
-# Redis·þÎñÆ÷Á¬½ÓÃÜÂë£¨Ä¬ÈÏÎª¿Õ£©
+# Redisï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ë£¨Ä¬ï¿½ï¿½Îªï¿½Õ£ï¿½
 spring.redis.password=baokang
-# Á¬½Ó³Ø×î´óÁ¬½ÓÊý£¨Ê¹ÓÃ¸ºÖµ±íÊ¾Ã»ÓÐÏÞÖÆ£©
+# ï¿½ï¿½ï¿½Ó³ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½Ê¹ï¿½Ã¸ï¿½Öµï¿½ï¿½Ê¾Ã»ï¿½ï¿½ï¿½ï¿½ï¿½Æ£ï¿½
 spring.redis.jedis.pool.max-active=1024
-# Á¬½Ó³Ø×î´ó×èÈûµÈ´ýÊ±¼ä£¨Ê¹ÓÃ¸ºÖµ±íÊ¾Ã»ÓÐÏÞÖÆ£©
+# ï¿½ï¿½ï¿½Ó³ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½È´ï¿½Ê±ï¿½ä£¨Ê¹ï¿½Ã¸ï¿½Öµï¿½ï¿½Ê¾Ã»ï¿½ï¿½ï¿½ï¿½ï¿½Æ£ï¿½
 spring.redis.jedis.pool.max-wait=10000
-# Á¬½Ó³ØÖÐµÄ×î´ó¿ÕÏÐÁ¬½Ó
+# ï¿½ï¿½ï¿½Ó³ï¿½ï¿½Ðµï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½
 spring.redis.jedis.pool.max-idle=200
-# Á¬½Ó³ØÖÐµÄ×îÐ¡¿ÕÏÐÁ¬½Ó
+# ï¿½ï¿½ï¿½Ó³ï¿½ï¿½Ðµï¿½ï¿½ï¿½Ð¡ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½
 spring.redis.jedis.pool.min-idle=0
-# Á¬½Ó³¬Ê±Ê±¼ä£¨ºÁÃë£©
+# ï¿½ï¿½ï¿½Ó³ï¿½Ê±Ê±ï¿½ä£¨ï¿½ï¿½ï¿½ë£©
 spring.redis.timeout=10000
-#redisÅäÖÃ½áÊø
+#redisï¿½ï¿½ï¿½Ã½ï¿½ï¿½ï¿½
 spring.redis.block-when-exhausted=true
 
 
