--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,8 +8,8 @@ spring.datasource.max-idle=8
 spring.datasource.min-idle=8
 spring.datasource.initial-size=10
 
-springfox.documentation.swagger.v2.host=https://sunnyqcloud.com
-springfox.documentation.swagger.v2.path=/api-docs
+#springfox.documentation.swagger.v2.host=https://sunnyqcloud.com
+#springfox.documentation.swagger.v2.path=/api-docs
 
 mybatis.mapper-locations=classpath:com.bkit.fatdown.mappers/*.xml
 
