--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     </parent>
     <groupId>com.bkit.fatdown</groupId>
     <artifactId>fatdown</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>2.0.4-SNAPSHOT</version>
     <packaging>war</packaging>
     <name>fatdown</name>
     <description>fatdown weapp</description>
@@ -50,6 +50,15 @@
             <artifactId>mysql-connector-java</artifactId>
             <scope>runtime</scope>
         </dependency>
+
+        <!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
+<!--        <dependency>-->
+<!--            <groupId>mysql</groupId>-->
+<!--            <artifactId>mysql-connector-java</artifactId>-->
+<!--            <version>5.1.46</version>-->
+<!--        </dependency>-->
+
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
