--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,27 +10,15 @@ spring.datasource.initial-size=10
 
 #springfox.documentation.swagger.v2.host=https://sunnyqcloud.com
 #springfox.documentation.swagger.v2.path=/api-docs
-
 mybatis.mapper-locations=classpath:com.bkit.fatdown.mappers/*.xml
-
-#Freemaker
-#spring.freemarker.allow-request-override=false
-#spring.freemarker.cache=false
-#spring.freemarker.check-template-location=true
-#spring.freemarker.content-type=text/html
-#spring.freemarker.expose-request-attributes=false
-#spring.freemarker.expose-session-attributes=false
-#spring.freemarker.expose-spring-macro-helpers=false
-#spring.freemarker.template-loader-path=classpath:/templates/
-#spring.freemarker.suffix=.ftl
-#spring.freemarker.charset=UTF-8
-
-#spring.mvc.static-path-pattern=/Health/**
-
 #Tomcat
 server.port=8088
 server.servlet.context-path=/fatdown
+# 最大支持文件大小
 spring.servlet.multipart.max-file-size=10MB
+# 最大支持请求大小
+#spring.servlet.multipart.max-request-size=10MB
+#fileupload end
 
 #FTP
 FTP_ADDRESS = 134.175.135.105
