完成反馈模块功能实现

--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -24,7 +24,7 @@ log4j.appender.warn_appender.MaxFileSize=20000KB
 log4j.appender.warn_appender.MaxBackupIndex=30
 log4j.appender.warn_appender.layout=org.apache.log4j.PatternLayout
 log4j.appender.warn_appender.layout.ConversionPattern=%-d{yyyy-MM-dd HH\:mm\:ss}-%t-[%p]\: %m%n
-#将erro以上级别的日志输出到按大小滚动文件
+#将error以上级别的日志输出到按大小滚动文件
 log4j.appender.error_appender=org.apache.log4j.RollingFileAppender
 log4j.appender.error_appender.File=fatdown_log/error.log
 log4j.appender.error_appender.MaxFileSize=20000KB
