--- a/pom.xml
+++ b/pom.xml
@@ -133,6 +133,17 @@
             <version>2.8.0</version>
         </dependency>
         <!--swagger文档工具结束-->
+
+<!--        <dependency>-->
+<!--            <groupId>org.springframework.boot</groupId>-->
+<!--            <artifactId>spring-boot-starter-security</artifactId>-->
+<!--        </dependency>-->
+<!--        &lt;!&ndash;JWT(Json Web Token)登录支持&ndash;&gt;-->
+<!--        <dependency>-->
+<!--            <groupId>io.jsonwebtoken</groupId>-->
+<!--            <artifactId>jjwt</artifactId>-->
+<!--            <version>0.9.0</version>-->
+<!--        </dependency>-->
     </dependencies>
 
     <build>
