--- a/pom.xml
+++ b/pom.xml
@@ -134,47 +134,17 @@
         </dependency>
         <!--swagger文档工具结束-->
 
-<!--        <dependency>-->
-<!--            <groupId>org.springframework.boot</groupId>-->
-<!--            <artifactId>spring-boot-starter-security</artifactId>-->
-<!--        </dependency>-->
-<!--        &lt;!&ndash;JWT(Json Web Token)登录支持&ndash;&gt;-->
-<!--        <dependency>-->
-<!--            <groupId>io.jsonwebtoken</groupId>-->
-<!--            <artifactId>jjwt</artifactId>-->
-<!--            <version>0.9.0</version>-->
-<!--        </dependency>-->
+        <dependency>
+            <groupId>org.apache.shiro</groupId>
+            <artifactId>shiro-spring</artifactId>
+            <version>1.3.2</version>
+        </dependency>
+
     </dependencies>
 
     <build>
         <plugins>
-            <!--            <plugin>-->
-            <!--                <groupId>org.asciidoctor</groupId>-->
-            <!--                <artifactId>asciidoctor-maven-plugin</artifactId>-->
-            <!--                <version>1.5.3</version>-->
-            <!--                <executions>-->
-            <!--                    <execution>-->
-            <!--                        <id>generate-docs</id>-->
-            <!--                        <phase>prepare-package</phase>-->
-            <!--                        <goals>-->
-            <!--                            <goal>process-asciidoc</goal>-->
-            <!--                        </goals>-->
-            <!--                        <configuration>-->
-            <!--                            <backend>html</backend>-->
-            <!--                            <doctype>book</doctype>-->
-            <!--                        </configuration>-->
-            <!--                    </execution>-->
-            <!--                </executions>-->
-            <!--                <dependencies>-->
-            <!--                    <dependency>-->
-            <!--                        <groupId>org.springframework.restdocs</groupId>-->
-            <!--                        <artifactId>spring-restdocs-asciidoctor</artifactId>-->
-            <!--                        <version>${spring-restdocs.version}</version>-->
-            <!--                    </dependency>-->
-            <!--                </dependencies>-->
-            <!--            </plugin>-->
-            <!--            &lt;!&ndash;使用热部署的插件&ndash;&gt;-->
-
+            <!--使用热部署的插件-->
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
