--- a/pom.xml
+++ b/pom.xml
@@ -139,6 +139,11 @@
             <artifactId>shiro-spring</artifactId>
             <version>1.3.2</version>
         </dependency>
+        <dependency>
+            <groupId>org.assertj</groupId>
+            <artifactId>assertj-core</artifactId>
+            <version>3.11.1</version>
+        </dependency>
 
     </dependencies>
 
