--- a/pom.xml
+++ b/pom.xml
@@ -132,6 +132,12 @@
             <artifactId>springfox-swagger-ui</artifactId>
             <version>2.8.0</version>
         </dependency>
+        <!-- MyBatis 生成器 -->
+        <dependency>
+            <groupId>org.mybatis.generator</groupId>
+            <artifactId>mybatis-generator-core</artifactId>
+            <version>1.3.3</version>
+        </dependency>
         <!--swagger文档工具结束-->
 
 <!--        <dependency>-->
