--- a/pom.xml
+++ b/pom.xml
@@ -70,6 +70,11 @@
             <version>2.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-aop</artifactId>
+        </dependency>
+
         <!--redis依赖配置-->
 <!--        <dependency>-->
 <!--            <groupId>org.springframework.boot</groupId>-->
