--- a/pom.xml
+++ b/pom.xml
@@ -55,7 +55,6 @@
             <artifactId>mysql-connector-java</artifactId>
             <scope>runtime</scope>
         </dependency>
-
         <dependency>
             <groupId>commons-net</groupId>
             <artifactId>commons-net</artifactId>
@@ -190,18 +189,19 @@
             <plugin>
                 <groupId>org.mybatis.generator</groupId>
                 <artifactId>mybatis-generator-maven-plugin</artifactId>
-                <version>1.3.5</version>
+                <version>1.3.7</version>
                 <configuration>
                     <verbose>true</verbose>
                     <overwrite>true</overwrite>
-                    <configurationFile>src\main\resources\config\mybatis_generator.xml</configurationFile>
+                    <configurationFile>E:\IdeaProject\FatDown\src\main\resources\config\mybatis_generator.xml
+                    </configurationFile>
                 </configuration>
                 <dependencies>
                     <!--MyBatis Generator及工具-->
                     <dependency>
                         <groupId>org.mybatis.generator</groupId>
                         <artifactId>mybatis-generator-core</artifactId>
-                        <version>1.3.5</version>
+                        <version>1.3.7</version>
                     </dependency>
                     <dependency>
                         <groupId>tk.mybatis</groupId>
