--- a/pom.xml
+++ b/pom.xml
@@ -152,6 +152,11 @@
             <artifactId>springfox-swagger-ui</artifactId>
             <version>2.8.0</version>
         </dependency>
+        <dependency>
+            <groupId>com.github.xiaoymin</groupId>
+            <artifactId>swagger-bootstrap-ui</artifactId>
+            <version>1.9.6</version>
+        </dependency>
         <!--swagger文档工具结束-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
