--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -18,26 +18,26 @@ spring:
       # 最大支持文件大小
       max-file-size: 10MB
 
-  redis:
-    # Redis服务器地址
-    host: 134.175.135.105
-    # Redis数据库索引（默认为0）
-    database: 0
-    # Redis服务器连接端口
-    port: 6379
-    password: baokang
-    # 连接超时时间（毫秒）
-    timeout: 10000ms
-    jedis:
-      pool:
-        # 连接池最大连接数（使用负值表示没有限制）
-        max-active: 1024
-        # 连接池最大阻塞等待时间（使用负值表示没有限制）
-        max-wait: 10000ms
-        # 连接池中的最大空闲连接
-        max-idle: 200
-        # 连接池中的最小空闲连接
-        min-idle: 0
+#  redis:
+#    # Redis服务器地址
+#    host: 134.175.135.105
+#    # Redis数据库索引（默认为0）
+#    database: 0
+#    # Redis服务器连接端口
+#    port: 6379
+#    password: baokang
+#    # 连接超时时间（毫秒）
+#    timeout: 10000ms
+#    jedis:
+#      pool:
+#        # 连接池最大连接数（使用负值表示没有限制）
+#        max-active: 1024
+#        # 连接池最大阻塞等待时间（使用负值表示没有限制）
+#        max-wait: 10000ms
+#        # 连接池中的最大空闲连接
+#        max-idle: 200
+#        # 连接池中的最小空闲连接
+#        min-idle: 0
 
 mybatis:
   # mybatis pageHelper
