--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -62,11 +62,11 @@ jwt:
   expiration: 604800
   # JWT负载中拿到开头
   tokenHead: Bearer
-
 # 自定义redis key
 redis:
   key:
     prefix:
       authCode: "portal:authCode:"
     expire:
-      authCode: 120 # 验证码超期时间
+      # 验证码超时时间,默认 5分钟
+      authCode: 300
